<resources>
    <string name="app_name">AnimalTinder</string>
    <string name="login">Login</string>
    <string name="password">Password</string>

    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="remember_login_password">Remember login and password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="enter_password1">Enter the password</string>
    <string name="enter_password2">Enter the password again</string>

    <string name="menu_nav_drawer_profile">Profile</string>
    <string name="menu_nav_drawer_followers">Followers</string>
    <string name="menu_nav_drawer_add">Add</string>
    <string name="nav_drawer_header_picture_description">User picture</string>
    <string name="user_profile_fragment_layout_label">My Profile</string>
    <string name="button_search_user_profile_fragment">Search</string>

    <string name="loading_dialog_string">Please wait… Logging into Animal Tinder</string>

    <!-- API ENDPOINT ADRESS -->
    <string name="api_endpoint_address">https://animtind.herokuapp.com/api/</string>
    <string name="api_resources_address">https://animtind.herokuapp.com/static</string>

    <!--Shared Pref Strings-->
    <string name="shared_pref_password_key">Sh_pr_pass</string>
    <string name="shared_pref_email_key">Sh_pr_email</string>
    <string name="shared_pref_token_key">Sh_pr_token</string>

    <string name="advert_detail_fragment_label">Details</string>

    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>
    <string name="bio">bio</string>
    <string name="header">header</string>
    <string name="text_view_bio_add_fragment_hint">My pet is aswsome !</string>
    <string name="add_bio_dialog_fragment_text_view_add">Add Bio</string>
    <string name="add_bio_dialog_fragment_cancel_button_text">Cancel</string>
    <string name="add_bio_dialog_fragment_add_button_text">Add</string>
    <string name="text_view_add_bio_header_bio">Bio:</string>
    <string name="menu_nav_drawer_my_adverts">My Adverts</string>
    <string name="menu_nav_drawer_edit_profile">Edit profile</string>
    <string name="add_bio_dialog_fragment_name">Name</string>
    <string name="add_bio_dialog_fragment_description">Description/Bio</string>
    <string name="user_profile_fragment_welcome">Welcome !</string>
    <string name="profile_picture_changed">Profile picture changed!</string>
    <string name="no_changes">No changes added</string>
</resources>
