<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/user_profile_fragment_layout"
            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/menu_nav_drawer_profile">

    </item>
    <item
            android:id="@+id/add_fragment_layout"
            android:icon="@drawable/ic_add_a_photo_black_24dp"
            android:title="@string/menu_nav_drawer_add">

    </item>
    <item
            android:id="@+id/layout_adverts_fragment"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/menu_nav_drawer_my_adverts">

    </item>

    <item
        android:id="@+id/edit_user_profile_fragment"
        android:icon="@drawable/ic_person_outline_black_24dp"
        android:title="@string/menu_nav_drawer_edit_profile">

    </item>
</menu>