<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/activity_login_root_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/doggy_gray">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_login_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/doggy_orange"
        app:boxBackgroundColor="@color/doggy_orange"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_login_login_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            app:backgroundTint="@color/doggy_violet"
            android:singleLine="true"

            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_login_password_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/doggy_orange"
        app:boxBackgroundColor="@color/doggy_orange"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_login_password_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            app:backgroundTint="@color/doggy_violet"
            android:singleLine="true"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_login_login_button"
        style="@style/login_activity_button_style"
        android:text="@string/log_in"
        />

    <Button
        android:id="@+id/activity_login_register_button"
        style="@style/login_activity_button_style"
        android:text="@string/register"
        />


    <CheckBox
        android:id="@+id/activity_login_remember_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_login_password"
        />

</LinearLayout>